style.css
*,
::before,
::after {
  box-sizing: border-box;
}

html {
  font-family: system-ui, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';
  line-height: 1.15;
  -webkit-text-size-adjust: 100%;
}

body {
  height: 100vh;
  margin: 0;
  background: linear-gradient(135deg, #deefeb 25%, transparent 25%) 50px 0,
              linear-gradient(225deg, #deefeb 25%, transparent 25%) 50px 0,
              linear-gradient(315deg, #deefeb 25%, transparent 25%),
              linear-gradient(45deg, #deefeb 25%, transparent 25%);
  background-size: 100px 100px;
}

.wrapper {
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.content {
  margin: auto;
}

.footer {
  padding-bottom: 1em;
}

.footer a {
  color: #696969;
  font-size: .8rem;
}

.animated {
  font-size: 3rem;
  text-align: center;
  color: #fcf6bd;
  font-family: 'Comic Sans', 'Comic Sans MS', 'Chalkboard', 'ChalkboardSE-Regular', sans-serif;
  font-weight: bold;
  text-shadow: 3px 3px 0px #eb452b,
               6px 6px 0px #efa032,
               9px 9px 0px #46b59b,
               12px 12px 0px #017e7f,
               15px 15px 0px #052939;
}

.animated span {
  display: inline-block;
  animation: wave 1.2s ease-in-out infinite;
  animation-delay: calc(0.1s * var(--i));
}

@keyframes wave {
  0% {
      transform: translateY(0px);
  }

  50% {
      transform: translateY(-50px);
  }

  100% {
      transform: translateY(0px);
  }
}

